--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       position: absolute;
       width: 30px;
       height: 30px;
-      background: url('cánh-hoa-đào.png') no-repeat center/contain;
+      background: url('img.png') no-repeat center/contain;
       opacity: 0.8;
       pointer-events: none;
       animation: fall 5s linear infinite;
